# robot-single-thread

./: README.md  build.bat  config.json  main.py  pyproject.toml  tree.py  vision_data.json
config/system/: config.json
src/consts/: const.py
src/controller/: controller_qt.py
src/core/: kinematics.py  trajectory.py
src/depthSegmentPython/: RGBDDepthSegmenterWrap.py
src/depthSegmentPython/config/: M001.json
src/depthSegmentPythonV3/: RGBDDepthSegmenterWrap_yolo.py
src/depthSegmentPythonV3/config/: M001.json
src/depthSegmentPythonV3/model/: iron_chip.cfg
src/plc/: plc_client.py
src/ui/: config_window.py
src/utils/: __init__.py  config_manager.py  logger.py  path_helper.py
src/vision/: detect_algo.py  orbbec_camera.py
