[project]
name = "robot-single-thread"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy==2.1.3",
    "pymodbus==3.5.4",
    "sympy==1.13.3",
    "pyqt5==5.15.10",
    "pyqt5-qt5==5.15.2",  # 强制锁定这个子依赖的版本
    "pyorbbecsdk2>=2.0.15",
    "scipy>=1.16.3",
]

[dependency-groups]
dev = [
    "nuitka>=2.8.9",
    "zstandard>=0.25.0",
]
